tests/compile_fail/borrow_mut/multi_field.rs
#[derive(derive_more::BorrowMut)]
struct Foo(i32, i32);

fn main() {}
