tests/compile_fail/borrow_mut/multi_field.stderr
error: `BorrowMut` can only be derived for structs with exactly one field
 --> tests/compile_fail/borrow_mut/multi_field.rs:2:11
  |
2 | struct Foo(i32, i32);
  |           ^^^^^^^^^^
